Add parsing for base, x, y