@@ -1,5 +1,6 @@
 package io.github.moremcmeta.animationplugin;
 
+import com.google.common.collect.ImmutableList;
 import com.mojang.datafixers.util.Pair;
 import io.github.moremcmeta.moremcmeta.api.client.metadata.ParsedMetadata;
 import io.github.moremcmeta.moremcmeta.api.client.texture.Color;
@@ -65,7 +66,8 @@ public class AnimationComponentProviderTest {
     public void assemble_NullFrameGroup_NullPointerException() {
         AnimationComponentProvider provider = new AnimationComponentProvider(Optional::empty);
         expectedException.expect(NullPointerException.class);
-        provider.assemble(new AnimationMetadata(10, 20, 10, true, LARGE_MOCK_FRAME_LIST, 0, true), null);
+        provider.assemble(new AnimationMetadata(10, 20, 10, true, LARGE_MOCK_FRAME_LIST,
+                ImmutableList.of(), 0, 0, 0, true), null);
     }
 
     @Test
@@ -80,7 +82,8 @@ public class AnimationComponentProviderTest {
         AnimationComponentProvider provider = new AnimationComponentProvider(Optional::empty);
         int time = 33;
         TextureComponent<CurrentFrameView, UploadableFrameView> component = provider.assemble(
-                new AnimationMetadata(10, 20, time, true, List.of(), 0, false),
+                new AnimationMetadata(10, 20, time, true, ImmutableList.of(),
+                        ImmutableList.of(), 0, 0, 0, false),
                 MOCK_FRAME_GROUP
         );
 
@@ -99,7 +102,8 @@ public class AnimationComponentProviderTest {
         AnimationComponentProvider provider = new AnimationComponentProvider(Optional::empty);
 
         TextureComponent<CurrentFrameView, UploadableFrameView> component = provider.assemble(
-                new AnimationMetadata(10, 20, 33, true, LARGE_MOCK_FRAME_LIST, 0, false),
+                new AnimationMetadata(10, 20, 33, true, LARGE_MOCK_FRAME_LIST,
+                        ImmutableList.of(), 0, 0, 0, false),
                 MOCK_FRAME_GROUP
         );
 
@@ -122,7 +126,8 @@ public class AnimationComponentProviderTest {
         AnimationComponentProvider provider = new AnimationComponentProvider(Optional::empty);
 
         TextureComponent<CurrentFrameView, UploadableFrameView> component = provider.assemble(
-                new AnimationMetadata(10, 20, 33, true, SMALL_MOCK_FRAME_LIST, 0, false),
+                new AnimationMetadata(10, 20, 33, true, SMALL_MOCK_FRAME_LIST,
+                        ImmutableList.of(), 0, 0, 0, false),
                 MOCK_FRAME_GROUP
         );
 
@@ -145,7 +150,8 @@ public class AnimationComponentProviderTest {
         AnimationComponentProvider provider = new AnimationComponentProvider(Optional::empty);
         int time = 33;
         TextureComponent<CurrentFrameView, UploadableFrameView> component = provider.assemble(
-                new AnimationMetadata(10, 20, time, true, List.of(), 0, true),
+                new AnimationMetadata(10, 20, time, true, ImmutableList.of(),
+                        ImmutableList.of(), 0, 0, 0, true),
                 MOCK_FRAME_GROUP
         );
 
@@ -164,7 +170,8 @@ public class AnimationComponentProviderTest {
         AnimationComponentProvider provider = new AnimationComponentProvider(Optional::empty);
 
         TextureComponent<CurrentFrameView, UploadableFrameView> component = provider.assemble(
-                new AnimationMetadata(10, 20, 33, true, LARGE_MOCK_FRAME_LIST, 0, true),
+                new AnimationMetadata(10, 20, 33, true, LARGE_MOCK_FRAME_LIST,
+                        ImmutableList.of(), 0, 0, 0, true),
                 MOCK_FRAME_GROUP
         );
 
@@ -187,7 +194,8 @@ public class AnimationComponentProviderTest {
         AnimationComponentProvider provider = new AnimationComponentProvider(Optional::empty);
 
         TextureComponent<CurrentFrameView, UploadableFrameView> component = provider.assemble(
-                new AnimationMetadata(10, 20, 33, true, SMALL_MOCK_FRAME_LIST, 0, true),
+                new AnimationMetadata(10, 20, 33, true, SMALL_MOCK_FRAME_LIST,
+                        ImmutableList.of(), 0, 0, 0, true),
                 MOCK_FRAME_GROUP
         );
 
@@ -250,7 +258,8 @@ public class AnimationComponentProviderTest {
         AnimationComponentProvider provider = new AnimationComponentProvider(Optional::empty);
         int time = 33;
         TextureComponent<CurrentFrameView, UploadableFrameView> component = provider.assemble(
-                new AnimationMetadata(10, 20, time, true, List.of(), 0, false),
+                new AnimationMetadata(10, 20, time, true, ImmutableList.of(),
+                        ImmutableList.of(), 0, 0, 0, false),
                 frameGroup
         );
 
